djaoapp/static/scss/base/djaodjin-dashboard.scss
/* ... */
@if $enable-dark-mode {
  @include color-mode(dark, true) {
    color-scheme: dark;

    --example-bg: #{$example-bg-dark};
    --example-color: #{$example-color-dark};
    --example-title-bg: #{$example-title-bg-dark};
    --example-title-color: #{$example-title-color-dark};

    --jumbotron-shadow-start-color: #{$jumbotron-shadow-start-color-dark};
    --jumbotron-shadow-end-color: #{$jumbotron-shadow-end-color-dark};
  }
}

/* used only in templates/base.html */
html, body {
  height: 100%;
}

body{
  min-width:100%;
}


#wrap{
  width: 100%;
  min-height: 100%;
}

/*
  Unless the font-size for #main and .footer match, using ``em`` metrics will
  create bottom and overlap margins that have different heights, hence
  sticking the footer to the bottom while introducing a "border" above it.
*/
#main {
  min-height: 100%;
  padding-bottom: $footer-height; /* must be in pixel (see comment abolve) */
}

// top menubar (requires `bg-primary` as background)
.navbar.bg-primary .navbar-brand,
.navbar.bg-primary .nav-link {
  color: $white;
}

.navbar.bg-primary .navbar-brand:hover,
.navbar.bg-primary .navbar-brand:focus,
.navbar.bg-primary .nav-link:hover,
.navbar.bg-primary .nav-link:focus {
  color: map-get($theme-colors, "primary");
  background-color: $white;
}

.footer {
  position: relative;
  height: $footer-height;         /* must be in pixel (see comment abolve) */
  bottom: 0;
  margin: -$footer-height 0 0 0;
  padding: 20px 0;
  clear:both;
  text-align:center;
  font-size: 12px;
  flex-shrink: 0;
  color: #FFF;
  background-color: map-get($theme-colors, "primary");
  width: 100%;
}

.footer a {
  color: #FFFFFF;
}

.footer a i {
  font-size: 24px;
}

.footer-links {
  margin-bottom: 10px;
}

.footer-links a {
  margin: 0 5px;
  font-size: 14px;
}

.footer-links a i {
  font-size: 24px;
}

.navbar .divider-vertical {
  border-right: 1px solid var(--bs-body-color);
  padding-left: 0.5rem;
  margin-right: 0.5rem;
}


// Manager dashboards (templates/saas/*.html)
// --------


.dashboard-container {
    clear: left;
    float: left;
    width: 100%;
// XXX temporary override to see the balances table
//    overflow: hidden;
}

.dashboard-pane {
  left: -1;
}

.sidebar-pin-toggle > .fa-solid:before {
  content: "\f08d"; // fa-thumbtack
  font-family: "Font Awesome 7 Free";
}

.dashboard-pane-pinned {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  position: inherit;
  width: inherit;
  left: 0;
}

.dashboard-pane-pinned .sidebar-pin-toggle > .fa-solid:before {
  content: "\e68f"; // fa-thumtack-slash
  font-family: "Font Awesome 7 Free";
}

.dashboard-nav {
  display: none;

  width: $dashboard-sidebar-width; // col-md-2 width: 16.66666667%;
  overflow: visible; // so we can see the shadow
  flex-grow: 1;
  user-select: none;
  -webkit-box-flex: 1;
  -ms-flex-positive: 1;
  position: fixed;
  top: 0;
  bottom: 0;
  z-index: 3000; // #app-toolbar-left is 2000
  height: 100%;

  transition: display 0.25s allow-discrete;
}

.dashboard-pane-sidebar .dashboard-nav.sidebar-opened {
    display: block;
}

.dashboard-pane-sidebar .dashboard-nav.sidebar-hidden {
    display: none;
}

.dashboard-nav .sidebar-animate {
  overflow: hidden;
  position: relative;
  height: calc(100vh - #{$dashboard-sidebar-logo-height});
  border-right: 1px solid #ccc;
  box-shadow: 0.3em 0.5em 1em rgb(0 0 0 / 60%);

  left: 0;
  -webkit-transition: left 0.25s ease-in-out;
  -moz-transition: left 0.25s ease-in-out;
  -ms-transition: left 0.25s ease-in-out;
  -o-transition: left 0.25s ease-in-out;
  transition: left 0.25s ease-in-out;
}

.dashboard-pane-sidebar .dashboard-nav.sidebar-hidden .sidebar-animate {
    left: -$dashboard-sidebar-width;
}

.dashboard-nav-main {
    float: left;
    min-height: 100%;
    padding-bottom: $dashboard-nav-footer-height; /* must be equal to .dashboard-nav-footer height in pixel */
}

.dashboard-nav-main .navbar {
    width: $dashboard-sidebar-width;
    height: $dashboard-sidebar-logo-height;
}


.dashboard-nav-menu {
  height: calc(100vh - (#{$dashboard-nav-footer-height} + #{$dashboard-sidebar-logo-height}));
  overflow-y: auto;
}

.dashboard-nav-inner-container .navbar-brand > img {
    max-height: 30px;
}

.dashboard-nav-footer {
    position: absolute;
    clear:both;
    bottom: 0;
    padding: 10px 30px 10px;
    font-size: 11px;
    width: $dashboard-sidebar-width;
    border-top: 1px solid;
}

.dashboard-nav-footer .footer-links {
    margin-top: 13px;
}

.dashboard-nav-footer .footer-links a {
    margin: 0 3px;
}

.dashboard-nav-footer .footer-links a:first-child {
    margin-left: 0;
}

.dashboard-nav-footer .footer-links a:last-child {
    margin-right: 0;
}

.dashboard-content {
    width: 100%;
}

.dashboard-content > header,
.dashboard-content > .fullviewport > header {
    position: sticky;
    top: 0;
    z-index: 4;
    width: 100%;
    left: 0;
}

.dashboard-pane-pinned .dashboard-content-body {
  padding-left: $dashboard-sidebar-toggle;
}

.dashboard-nav .dashboard-nav-menu {
    width: $dashboard-sidebar-width;
}

.dashboard-nav-menu > hr {
  margin-left: $dashboard-sidebar-toggle;
  margin-right: $dashboard-sidebar-toggle;
}

.dashboard-nav-menu > .nav {
   margin-left: $dashboard-sidebar-toggle;
   margin-right: $dashboard-sidebar-toggle;
}

.dashboard-nav-menu > .nav li {
    margin: 5px 0px;
}

.dashboard-nav-menu > .nav li > a,
.dashboard-nav-menu > .nav li.active > a {
   height:38px;
   font-size:13px;
}

.dashboard-nav-menu > .nav li > a > i {
   width:25px;
   text-align:center;
}

.dashboard-pane-pinned .dashboard-nav {
    // sidebar is visible on dashboard on desktops
    display: block;
}

.dashboard-pane-pinned .dashboard-nav .sidebar-animate {
    box-shadow: none;
}

.dashboard-pane-pinned .dashboard-content {
  margin-left: $dashboard-sidebar-width;
  width: calc(100vw - #{$dashboard-sidebar-width});
}

.content-area-container {
  min-height: 300px;
}


.navbar-nav {
    flex-direction: row;
}
/* ... */

